feat: mark as resolved instead of deleting
